--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.x",
-    "jade": "*",
-    "pg": ">=3.6.4",
+    "alike": "~1.2.0",
+    "connect": "^3.6.6",
     "cors": "~2.1.0",
+    "express": "^4.16.4",
+    "jade": "*",
     "moment": ">=2.19.3",
-    "alike": "~1.2.0"
+    "pg": ">=3.6.4"
   }
 }
